// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Partnerships renders correctly with default empty values 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root MuiBox-root-2"
  >
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
      >
        Indigenous
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1"
      >
        None
      </dd>
    </div>
    <div
      class="MuiBox-root MuiBox-root-4"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
      >
        Other Partnerships
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1"
      >
        None
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`Partnerships renders correctly with existing partnership values 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root MuiBox-root-10"
  >
    <div
      class="MuiBox-root MuiBox-root-11"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
      >
        Indigenous
      </dt>
      <dd
        class="MuiTypography-root makeStyles-projectPartners-9 MuiTypography-body1"
      >
        First nations code
      </dd>
      <dd
        class="MuiTypography-root makeStyles-projectPartners-9 MuiTypography-body1"
      />
    </div>
    <div
      class="MuiBox-root MuiBox-root-12"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
      >
        Other Partnerships
      </dt>
      <dd
        class="MuiTypography-root makeStyles-projectPartners-9 MuiTypography-body1"
      >
        partner 3
      </dd>
      <dd
        class="MuiTypography-root makeStyles-projectPartners-9 MuiTypography-body1"
      >
        partner 4
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`Partnerships renders correctly with invalid null values 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root MuiBox-root-6"
  >
    <div
      class="MuiBox-root MuiBox-root-7"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
      >
        Indigenous
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1"
      >
        None
      </dd>
    </div>
    <div
      class="MuiBox-root MuiBox-root-8"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
      >
        Other Partnerships
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1"
      >
        None
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;
